kubernetes/apps/automation/home-assistant/app/deployment.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/apps/deployment_v1.json
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-assistant
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
      containers:
        - name: app
          image: ghcr.io/home-assistant/home-assistant:2026.9.4@sha256:3e6710a7ab2a61311d9d899b719f6c3657791c63e8f4942cec4ebc42401d6b76
          ports:
            - name: http
              containerPort: 8123
            - name: coiot
              containerPort: 5683
              protocol: UDP
          startupProbe:
            tcpSocket:
              port: 8123
            failureThreshold: 30
            periodSeconds: 10
          livenessProbe: &probe
            httpGet:
              path: /
              port: 8123
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 1
            failureThreshold: 3
          readinessProbe: *probe
          resources:
            requests:
              cpu: 250m
              memory: 1Gi
            limits:
              cpu: 1000m
              memory: 2Gi
          volumeMounts:
            - name: config
              mountPath: /config
            - name: tmpfs
              mountPath: /config/logs
              subPath: logs
            - name: tmpfs
              mountPath: /config/tts
              subPath: tts
            - name: tmpfs
              mountPath: /tmp
              subPath: tmp
        - name: code-server
          image: ghcr.io/coder/code-server:4.139.1@sha256:0c067c3cf09ed1830ce282387826be8feefef8a5828f462791c2df3f1007ee17
          args:
            - --auth
            - none
            - --disable-telemetry
            - --disable-update-check
            - --user-data-dir
            - /config/.code-server
            - --extensions-dir
            - /config/.code-server
            - --port
            - "12321"
            - /config
          ports:
            - name: code-server
              containerPort: 12321
          resources:
            requests:
              cpu: 500m
              memory: 1Gi
            limits:
              cpu: 1000m
              memory: 2Gi
          volumeMounts:
            - name: config
              mountPath: /config
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: home-assistant
        - name: tmpfs
          emptyDir: {}
