kubernetes/apps/automation/home-assistant/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-assistant-app
  annotations:
    lbipam.cilium.io/ips: "10.0.30.38"
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 8123
      targetPort: 8123
      protocol: TCP
    - name: coiot
      port: 5683
      targetPort: 5683
      protocol: UDP
---
apiVersion: v1
kind: Service
metadata:
  name: home-assistant-code-server
spec:
  type: ClusterIP
  ports:
    - name: code-server
      port: 12321
      targetPort: 12321
      protocol: TCP
